--- a/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/src/components/header/Header.scss
+++ b/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/src/components/header/Header.scss
@@ -8,6 +8,7 @@
     justify-content: space-between;
     height: 73px;
     &-list{
+        position: relative;
         max-width: 594px;
         list-style-type: none;
         display: flex;
