--- a/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/src/components/users/Users.scss
+++ b/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/src/components/users/Users.scss
@@ -1,7 +1,7 @@
 .main-container{
-    max-width: 1650px;
-    margin: 0 auto;
+
     &-title{
+        position: relative;
         font-weight: 500;
         font-size: 24px;
         line-height: 29px;
@@ -11,11 +11,13 @@
         margin-bottom: 60px;
     }
     &-form{
-        // margin-bottom: 47px;
+
         &-search{
+            position: absolute;
             width: 578px;
-            position: relative;
+            margin-bottom: 40px;
             &-input{
+                position: relative;
                 background: #FFF8EE;
                 box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
                 border: none;
@@ -36,6 +38,77 @@
                 height: 10px;
                 border: none;
             }
+        }
+    }
+    &-table{
+        margin: 0 auto;
+        text-align: left;
+        border-spacing: 10px 30px;
+        border-collapse: collapse;
+        tr:first-child td{
+            padding: 0;
+            padding-top: 40px;
+            background-color: white;
+            padding-bottom: 30px;
+            text-align: right;
+        }
+        &-button_add{
+            background: linear-gradient(270deg, #FFA15E 0%, #FFE974 100%);
+            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+            border-radius: 20px;
+            border: none;
+            font-weight: 500;
+            font-size: 24px;
+            line-height: 24px;
+            text-align: center;
+            color: #FFFFFF;
+            width: 40px;
+            height: 40px;
+        }
+        &-button{
+            display: block;
+            margin: 0 auto;
+            border: none;
+            background-color: inherit;
+        }
+        td{
+            padding: 10px 20px;
+            border-bottom: 1px solid white;
+            transition: all 0.5s linear;
+        }
+        th{
+            padding: 10px 20px;
+            border-bottom: 1px solid white;
+            border-top-left-radius: 10px;
+            border-top-right-radius: 10px;
+        }
+
+        th:nth-child(even)  {
+            background: #FFE974;
+        }
+        th:nth-child(odd)  {
+            background: #FFFAD1;
+        } 
+        
+        td:nth-child(even) {
+            background: #FFE974;
+         }
+        td:nth-child(odd) {
+            background: #FFFAD1;
+        }
+        
+        tr:last-child td{
+            border-bottom: none;
+        }
+        tr:last-child td:last-child{
+            border-bottom-right-radius: 10px;
+        }
+        tr:last-child td:first-child{
+             border-bottom-left-radius: 10px;
+        }
+        
+        tr:hover td{
+             background: #FFD700;
         }
     }
 }
