--- a/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/src/index.scss
+++ b/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/src/index.scss
@@ -8,11 +8,13 @@ a{
     text-decoration: none;
 }
 header{
+  //position: absolute;
+  top: 0;
   width: 100%;
-  //max-width: 1920px;
   height: 73px;;
 }
 nav{
+  //position: absolute;
   height: 70px;
   width: 100%;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.25);
@@ -21,5 +23,21 @@ nav{
 }
 
 main{
+  //position: absolute;
   width: 100%;
+  margin-bottom: 200px;
+}
+.main-container{
+  max-width: 1650px;
+  margin: 0 auto;
+}
+footer{
+  position: relative;
+  bottom: 0;
+  width: 100%;
+  height: 145px;
+  padding-top: 33px;
+  padding-bottom: 22px;
+  background-color: #FFD700;
+  box-shadow: 0px -4px 10px 1px rgba(0, 0, 0, 0.25);
 }
