--- a/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/src/index.scss
+++ b/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/src/index.scss
@@ -1,4 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
+html,body{
+  height: 100%;
+}
 body {
   max-width: 1920px;
   margin: 0;
@@ -23,17 +26,19 @@ nav{
 }
 
 main{
-  //position: absolute;
   width: 100%;
   margin-bottom: 200px;
 }
 .main-container{
   max-width: 1650px;
   margin: 0 auto;
+  padding-bottom: 145px;
+}
+.wrapper{
+  min-height: 100%;
 }
 footer{
-  position: relative;
-  bottom: 0;
+  margin-top: -145px;
   width: 100%;
   height: 145px;
   padding-top: 33px;
