--- a/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/src/index.scss
+++ b/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/src/index.scss
@@ -32,13 +32,18 @@ main{
 .main-container{
   max-width: 1650px;
   margin: 0 auto;
-  padding-bottom: 145px;
+  //padding-bottom: 145px;
 }
-.wrapper{
-  min-height: 100%;
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+.content {
+  flex: 1 0 auto;
 }
 footer{
-  margin-top: -145px;
+  flex: 0 0 auto;
   width: 100%;
   height: 145px;
   padding-top: 33px;
