--- a/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/src/components/button/Button.scss
+++ b/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/src/components/button/Button.scss
@@ -4,7 +4,10 @@
     border-radius: 10px;
     border: none;
     text-align: center;
-    font-weight: 500;
-    font-size: 16px;
-    padding: 8px 23px;
+}
+.button:hover{
+    background-color: #FFE660;
+}
+.button:disabled {
+    opacity: 0.4;
 }
