--- a/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/src/components/users/User.scss
+++ b/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/src/components/users/User.scss
@@ -27,7 +27,7 @@
         max-width: 460px;
         column-count: 2;
         //column-gap: 1em;
-        height: 300px;
+        height: 350px;
         &-child1{
             max-width: 155px;
             &-item{
@@ -66,11 +66,12 @@
                     border: none;
                     border-radius: 10px;
                     padding: 7px;
-                }
-                &-input.active{
-                    margin-top: -4px;
                     border: 2px solid #FFD700;
                 }
+                // &-input.active{
+                //     margin-top: -4px;
+
+                // }
             }
             &-box{
                 padding-left: 10px;
