--- a/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/src/components/authorize/Registration.scss
+++ b/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/src/components/authorize/Registration.scss
@@ -9,6 +9,7 @@ body{
 }
 main{
     margin:0;
+    
 }
 p{
     padding: 0;
@@ -40,13 +41,13 @@ h2{
     }
 }
 
-
 .form{
     background-color: white;
     text-align: center;
     padding: 20px 90px;
     box-shadow: 0px 4px 14px 8px rgba(0, 0, 0, 0.14);
     border-radius: 25px;
+    
     &.authorize{
         padding: 30px 90px 95px;
     }
@@ -63,6 +64,7 @@ h2{
             padding: 5px 0 0 5px;
         }
         &-input{
+            position: relative;
             z-index: 1;
             background-color: transparent;
             border: 2px solid #FFD700;
@@ -97,8 +99,7 @@ h2{
             text-align: left;
             top: 0;
             left: 16px;
-            margin-top: 8px;
-            z-index: -1;
+            margin-top: 10px;
             background-color: white;
             color: #BFBFBF;
             font-size: 14px;
