--- a/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/src/components/footer/Footer.scss
+++ b/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/src/components/footer/Footer.scss
@@ -33,6 +33,7 @@
             line-height: 19px;
         }
         &-img{
+            margin-top: 10px;
             margin-right: 20px;
         }
     }
