--- a/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/src/components/header/Header.scss
+++ b/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/src/components/header/Header.scss
@@ -17,7 +17,7 @@
         font-weight: 500;
         padding: 0;
         margin: 0;
-        &-item:not(:first-child){
+        &-item-link:not(:first-child){
             margin-left: 28px;
         }
         &-item-link{
