--- a/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/src/components/nav/NavMenu.scss
+++ b/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/src/components/nav/NavMenu.scss
@@ -20,13 +20,11 @@
     }
     &-list{
         position: relative;
-        list-style-type: none;
         display: flex;
         margin: 0;
         padding: 0;
         &-items{
             background-color: white;
-            
             box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
             border-radius: 15px;
             font-weight: 500;
@@ -35,15 +33,16 @@
             padding-top: 11px;
             padding-bottom: 11px;
             width: 168px;
+            color: black;
             &:not(:last-child){
                 margin-right: 53px;
             }
-            &:active{
+            &:hover{
                 background-color: #FFF9C1;
-            }
-            &-link{
-                color: black;
             }
         }
     }
+}
+.select{
+    background-color: #FFF9C1;
 }
