--- a/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/src/components/group/Group.scss
+++ b/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/src/components/group/Group.scss
@@ -16,7 +16,8 @@
         height: 121px;
         margin-left: 23px;
         &-img{
-            border-radius: 5px;
+            border: 1px solid #D9D9D9;
+            border-radius: 10px;
         }
     }
 
@@ -36,22 +37,25 @@
             }
         }
         &-address{
-            display:flex;
             font-weight: 300;
             font-size: 14px;
             line-height: 15px;
             margin-bottom: 18px;
+            display: flex;
+            align-items: center;
             &-text{
                 margin-left: 13px;
             }
         }
         &-contact{
+            display: flex;
+            align-items: center;
             font-weight: 300;
             font-size: 14px;
             line-height: 12px;
             color: black;
             &-phone{
-                margin-right: 20px;
+                margin-right: 18px;
             }
         }
     }
