--- a/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/src/components/SearchForm/SearchForm.scss
+++ b/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/src/components/SearchForm/SearchForm.scss
@@ -1,7 +1,7 @@
 .search{
-        position: absolute;
+        position: relative;
         width: 578px;
-        margin-bottom: 40px;
+        //margin-bottom: 40px;
         &-input{
             position: relative;
             background: #FFF8EE;
