--- a/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/src/components/authorize/Registration.scss
+++ b/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/src/components/authorize/Registration.scss
@@ -1,30 +1,28 @@
-body{
+.container-auth{
     background: linear-gradient(114.22deg, #FFE974 16.81%, #FF6B00 90.11%);
     width: 100%;
     display: flex;
     align-items: center;
     justify-items: center;
     justify-content: center;
-
-}
-main{
-    margin:0;
+    height: 100vh;
+    p{
+        padding: 0;
+        margin: 0;
     
+    }
+    h2{
+        padding: 0;
+        margin: 0;
+        font-weight: 700;
+        font-size: 24px;
+        line-height: 29px;
+        margin-bottom: 10px;
+    }
+
 }
 
-p{
-    padding: 0;
-    margin: 0;
 
-}
-h2{
-    padding: 0;
-    margin: 0;
-    font-weight: 700;
-    font-size: 24px;
-    line-height: 29px;
-    margin-bottom: 10px;
-}
 
 .registration{
         margin-bottom: 40px;
