--- a/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/src/components/competition/Competition.scss
+++ b/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/src/components/competition/Competition.scss
@@ -44,9 +44,25 @@
             display: flex;
             align-items: center;
             text-align: justify;
+            margin-bottom: 20px;
             &-text{
                 padding-left: 11px;
             }
         }
+    }
+}
+
+.button-container{
+    display: flex;
+    justify-content: end;
+    &_participant{
+        background: linear-gradient(90deg, #FFE974 0%, #FFA15E 100%);
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
+        border-radius: 15px;
+        border: none;
+        font-weight: 500;
+        font-size: 12px;
+        line-height: 15px;
+        padding: 9px 21px;
     }
 }
