--- a/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/src/components/userWindow/UserWindow.scss
+++ b/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/src/components/userWindow/UserWindow.scss
@@ -38,6 +38,7 @@ p{
     right: 0;
     box-shadow: 0px 4px 4px 2px rgba(0, 0, 0, 0.2);
     border-radius: 15px;
+    z-index: 1;
 }
 .auth{
     display: block;
