--- a/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/src/index.scss
+++ b/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/src/index.scss
@@ -6,6 +6,7 @@ body {
   max-width: 1920px;
   margin: 0;
   font-family: 'Inter', sans-serif;
+  color: black;
 }
 a{
     text-decoration: none;
@@ -43,6 +44,15 @@ main{
       justify-content: space-between;
   }
 }
+.detail{
+    max-width: 900px;
+    margin: 0 auto;
+    box-sizing: border-box;
+    box-shadow: 0px 4px 80px 25px rgba(0, 0, 0, 0.06);
+    border-radius: 30px;
+    padding: 60px 60px 90px 60px;
+}
+
 .wrapper {
   display: flex;
   flex-direction: column;
