--- a/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/src/components/authorize/Registration.scss
+++ b/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/src/components/authorize/Registration.scss
@@ -43,7 +43,7 @@
 .form{
     background-color: white;
     text-align: center;
-    padding: 20px 90px;
+    padding: 35px 90px;
     box-shadow: 0px 4px 14px 8px rgba(0, 0, 0, 0.14);
     border-radius: 25px;
     
@@ -52,7 +52,7 @@
     }
     &-group{
         position: relative;
-        margin-bottom: 30px;
+        margin-bottom: 20px;
         width: 270px;
         &-error{
             width: 100%;
@@ -108,15 +108,17 @@
         }
     }
     &-save{
-        margin-top: 15px;
+        margin-top: 25px;
         font-weight: 700;
         font-size: 14px;
         line-height: 17px;
         box-shadow: 0px 0px 14px 0px rgba(0, 0, 0, 0.14);
-        width: 185px;
-        height: 45px;
-        &.authorize{
-            margin-top: 25px;
+        padding: 13px 68px;
+        background-color: #FFD700;
+        color: white;
+        border-radius: 15px;
+        &:hover{
+            background-color: #FFE660;
         }
     }
 }
