--- a/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/src/components/groupPage/GroupPage.scss
+++ b/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/src/components/groupPage/GroupPage.scss
@@ -51,7 +51,19 @@ h1,h2{
         }
     }
     &_img{
-            margin-right: 20px;
+        margin-right: 20px;
     }
 
+}
+
+.participant{
+    background: linear-gradient(90deg, #FFE974 0%, #FFA15E 100%);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
+    border-radius: 15px;
+    padding: 10px 144px;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 17px;
+    display: block;
+    margin: 30px auto 0;
 }
