--- a/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/src/index.scss
+++ b/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/src/index.scss
@@ -16,6 +16,10 @@ ul{
   padding: 0;
   margin: 0;
 }
+button{
+  border: none;
+  text-align: center;
+}
 header{
   //position: absolute;
   top: 0;
@@ -50,7 +54,7 @@ main{
     box-sizing: border-box;
     box-shadow: 0px 4px 80px 25px rgba(0, 0, 0, 0.06);
     border-radius: 30px;
-    padding: 60px 60px 90px 60px;
+    padding: 60px;
 }
 
 .wrapper {
