--- a/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/src/components/footer/Footer.scss
+++ b/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/src/components/footer/Footer.scss
@@ -21,6 +21,9 @@
                 font-weight: 400;
                 font-size: 16px;
                 color:black;
+                &:hover{
+                    color: white;
+                }
             }
         }
     }
