--- a/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/src/components/groupChange/GroupChange.scss
+++ b/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/src/components/groupChange/GroupChange.scss
@@ -3,7 +3,7 @@
         display: flex;
         justify-content: space-between;
     }
-    text-align: end;
+    //text-align: end;
     max-width: 500px;
     margin: 0 auto;
     background: #FFFFFF;
@@ -13,13 +13,18 @@
     box-sizing: border-box;
     &-button{
         margin-bottom: 25px;
-        padding: 3px;
-        width: 30px;
-        height: 30px;
-        background: #FFF9C1;
-        border-radius: 10px;
+        text-align: right;
+        &__submit{
+            padding: 3px;
+            width: 30px;
+            height: 30px;
+            background: #FFF9C1;
+            border-radius: 10px;
+        }
     }
     &__error{
+        padding-left: 5px;
+        position: absolute;
         color: #FF6B00;
     }
     &-title{
@@ -36,6 +41,7 @@
         padding: 5px;
         border-radius: 10px;
         border: 2px solid #FFD700;
+        min-height: 250px;
         &:hover{
             box-shadow: 0px 7px 14px rgba(0, 0, 0, 0.14);
         }
