--- a/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/src/components/myGroupsPage/MyGroup.scss
+++ b/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/src/components/myGroupsPage/MyGroup.scss
@@ -1,3 +1,10 @@
+.request{
+    color: #888888;
+    font-weight: 600;
+    a{
+        color:#FF6B00;
+    }
+}
 .card{
     box-sizing: border-box;
     padding: 40px;
@@ -8,6 +15,15 @@
     font-weight: 500;
     font-size: 16px;
     line-height: 24px;
+        &__cancel{
+            width: 226px;
+            height: 36px;
+            color: white;
+            background: #FA8A4C;
+            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+            border-radius: 15px;
+            font-size: 14px;
+        }
         &-info{
         display: flex;
         justify-content: space-between;
@@ -37,6 +53,10 @@
         &__delete{
             background: #FFA15E;
         }
+    }
+    &__participant{
+        display: flex;
+        justify-content: space-between;
     }
     &-competition{
         display: flex;
