--- a/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/src/index.scss
+++ b/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/src/index.scss
@@ -37,7 +37,7 @@ nav{
 
 main{
   width: 100%;
-  margin-bottom: 200px;
+  
 }
 .main-container{
   max-width: 1650px;
@@ -57,16 +57,11 @@ main{
     padding: 60px;
 }
 
-.wrapper {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-}
 .content {
-  flex: 1 0 auto;
+  min-height: calc(100vh - 345px - 33px - 22px);
+  margin-bottom: 200px;
 }
 footer{
-  flex: 0 0 auto;
   width: 100%;
   height: 145px;
   padding-top: 33px;
