--- a/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/src/components/competition/Competition.scss
+++ b/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/src/components/competition/Competition.scss
@@ -2,20 +2,27 @@
     background: #FFFFFF;
     box-shadow: 0px 4px 14px 8px rgba(0, 0, 0, 0.14);
     border-radius: 15px;
-    width: 510px;
-    height: 258px;
+    padding: 35px 30px;
+    // width: 510px;
+    // height: 258px;
     display:flex;
     align-items: center;
     justify-content: start;
     justify-items: center;
     margin-bottom: 60px;
     &-container{
-        width: 230px;
-        height: 162px;
-        margin-left: 27px;
+        display: flex;
+        flex-direction: column;
+        justify-items: center;
+        &__status{
+            color:#FF6B00;
+            font-weight: 500;
+            font-size: 14px;
+        }
         &-img{
             border: 1px solid #D9D9D9;
             border-radius: 10px;
+            margin-bottom: 5px;
         }
     }
     &-info{
