--- a/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/src/components/competition/Competition.scss
+++ b/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/src/components/competition/Competition.scss
@@ -7,7 +7,7 @@
     // height: 258px;
     display:flex;
     align-items: center;
-    justify-content: start;
+    justify-content: flex-start;
     justify-items: center;
     margin-bottom: 60px;
     &-container{
