--- a/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/src/components/competition/Competition.scss
+++ b/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/src/components/competition/Competition.scss
@@ -3,13 +3,12 @@
     box-shadow: 0px 4px 14px 8px rgba(0, 0, 0, 0.14);
     border-radius: 15px;
     padding: 35px 30px;
-    // width: 510px;
-    // height: 258px;
     display:flex;
     align-items: center;
     justify-content: flex-start;
     justify-items: center;
     margin-bottom: 60px;
+    margin-right: 2rem;
     &-container{
         display: flex;
         flex-direction: column;
