--- a/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/src/components/myGroupsPage/MyGroup.scss
+++ b/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/src/components/myGroupsPage/MyGroup.scss
@@ -26,11 +26,17 @@
         }
         &-info{
         display: flex;
-        justify-content: space-between;
+        justify-content: flex-start;
 
         &__article{
             display: flex;
             flex-direction: column;
+            &:nth-child(1){
+                margin-right: 7%;
+            }
+            &:nth-child(2){
+                width: 70%;
+            }
         }
         &__title{
             margin-bottom: 10px;
@@ -123,12 +129,13 @@
 
 .mystatement{
     width: 70%;
-    &__article:nth-child(2n){
-        padding-top: 30px;
+    &__article:nth-child(2){
+        padding-top: 3%;
+        margin-left: 7%;
     }
     &__status{
         font-size: 18px;
         color:#FA8A4C;
-        margin-bottom: 10px;
+        margin-bottom: 30px;
     }
 }
