--- a/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/src/components/users/User.scss
+++ b/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/src/components/users/User.scss
@@ -31,34 +31,26 @@
             max-width: 155px;
             &-item{
                 margin: 0;
-                margin-bottom: 3px;
-                //background-color: #FFF9C1;
+                margin-bottom: 19px;
                 font-weight: 400;
                 font-size: 16px;
                 line-height: 19px;
-                padding: 16px;
+                padding-top: 16px;
             }
-            &-item:first-child{
-                border-top-left-radius: 15px;
-            }
-            &-item:last-child{
-                border-bottom-left-radius: 15px;
-            }
-            
         }
         &-child2{
             max-width: 300px;
-            p:first-child{
-                margin: 0px;
-                padding: 14px;
-                margin-bottom: 9px;
-            }
             &-item{
                 margin: 0;
                 margin-bottom: 19px;
                 font-weight: 400;
                 font-size: 16px;
                 line-height: 19px;
+                &:first-child{
+                    margin: 0px;
+                    padding: 14px;
+                    margin-bottom: 9px;
+                }
                 &-input{
                     font-weight: 400;
                     font-size: 16px;
@@ -67,13 +59,8 @@
                     padding: 7px;
                     border: 2px solid #FFD700;
                 }
-                // &-input.active{
-                //     margin-top: -4px;
-
-                // }
             }
             &-box{
-                padding-left: 10px;
                 margin-top: 40px;
                 max-width: 373px;
                 display: flex;
