--- a/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/src/index.scss
+++ b/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/src/index.scss
@@ -49,7 +49,8 @@ main{
   &-list{
       display: flex;
       flex-wrap: wrap;
-      justify-content: space-between;
+      justify-content: flex-start;
+      margin-left: 7%;
   }
 }
 .detail{
