--- a/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/src/components/myGroupsPage/MyGroup.scss
+++ b/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/src/components/myGroupsPage/MyGroup.scss
@@ -46,6 +46,7 @@
             font-weight: 400;
             line-height: 30px;
             max-width: 950px;
+            hyphens: auto;
             span{
                 font-weight: 500;
             }
