--- a/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/src/components/competition/Competition.scss
+++ b/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/src/components/competition/Competition.scss
@@ -1,14 +1,15 @@
 .competition{
-    background: #FFFFFF;
-    box-shadow: 0px 4px 14px 8px rgba(0, 0, 0, 0.14);
-    border-radius: 15px;
-    padding: 35px 30px;
+    // position: relative;
     display:flex;
     align-items: center;
     justify-content: flex-start;
     justify-items: center;
     margin-bottom: 60px;
     margin-right: 2rem;
+    padding: 35px 30px;
+    border-radius: 15px;
+    background: #FFFFFF;
+    box-shadow: 0px 4px 14px 8px rgba(0, 0, 0, 0.14);
     &-container{
         display: flex;
         flex-direction: column;
@@ -69,5 +70,42 @@
     margin-bottom: 20px;
     &-img{
         padding-right: 11px;
+    }
+}
+
+.take-part{
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 102%;
+    background: rgba(0, 0, 0, 0.44);
+    transition: 0.3s all;
+    &_active{
+        display: block;
+    }
+    &__container{
+        background-color: #FFFFFF;
+        border-radius: 20px;
+        width: 30%;
+        margin: 15% auto 0;
+        padding: 40px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        
+    }
+    &__title{
+        font-size: 20px;
+        font-weight: 600;
+        margin-bottom: 30px;
+        display: flex;
+        width: 100%;
+        justify-content: space-between;
+    }
+    &__close{
+        cursor: pointer;
     }
 }
