--- a/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/src/components/nav/NavMenu.scss
+++ b/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/src/components/nav/NavMenu.scss
@@ -9,13 +9,14 @@
     justify-content: space-between;
     &-icon{
         position: relative;
+        margin-top: 10px;
         height: 100%;
         max-width: 214px;
         display: flex;
         justify-content: space-between;
         align-items: center;
         &-items:not(:first-child){
-            margin-left: 27px;
+            margin-left: 17px;
         }
     }
     &-list{
