--- a/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/src/components/myGroupsPage/MyGroup.scss
+++ b/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/src/components/myGroupsPage/MyGroup.scss
@@ -27,7 +27,10 @@
         &-info{
         display: flex;
         justify-content: flex-start;
-
+        &__img{
+            border-radius: 5px;
+            margin-bottom: 30px;
+        }
         &__article{
             display: flex;
             flex-direction: column;
