--- a/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/src/components/detailStatement/DetailStatement.scss
+++ b/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/src/components/detailStatement/DetailStatement.scss
@@ -20,11 +20,16 @@
         color: #FFFFFF;
         border-radius: 10px;
         &:nth-child(1){
-            background: #01C22B;
-            margin-right: 40px;
+            background: #FFD700;
         }
         &:nth-child(2){
+            background: #01C22B;
+        }
+        &:nth-child(3){
             background: #FF6B00;
+        }
+        &:not(:nth-child(3)){
+            margin-right: 40px;
         }
         &:disabled{
             background-color: #E5E5E5;
