--- a/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/src/components/competition/Competition.scss
+++ b/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/src/components/competition/Competition.scss
@@ -87,6 +87,9 @@
     height: 102%;
     background: rgba(0, 0, 0, 0.44);
     transition: 0.3s all;
+    &__participant{
+        cursor: pointer;
+    }
     &_active{
         display: block;
     }
