--- a/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/src/components/myGroupsPage/MyGroup.scss
+++ b/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/src/components/myGroupsPage/MyGroup.scss
@@ -49,7 +49,7 @@
             font-weight: 400;
             line-height: 30px;
             max-width: 950px;
-            word-break: break-all;
+            overflow-wrap: break-word;
             span{
                 font-weight: 500;
             }
@@ -76,6 +76,7 @@
         justify-content: flex-end;
         align-items: center;
         &__link{
+            cursor: pointer;
             color: #FF6B00;
             margin-left: 5px;
         }
